# FreeUltraCode

./: README.md  build.sh  package.sh  run.bat  run.sh
.github/workflows/: release.yml
app/: check-i18n.cjs  fix-reverse.cjs  index.html  package-lock.json  package.json  version.txt
app/cli/: runtime-host.ts  ugs-job.mjs
app/cli/io/: cli-spawn.test.ts  cli-spawn.ts  stream.ts
app/doc/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  claude-code-workflow-openworkflow.ar.md  claude-code-workflow-openworkflow.de.md  claude-code-workflow-openworkflow.en.md  claude-code-workflow-openworkflow.es.md  claude-code-workflow-openworkflow.fr.md  claude-code-workflow-openworkflow.hi.md  claude-code-workflow-openworkflow.ja.md  claude-code-workflow-openworkflow.ko.md  claude-code-workflow-openworkflow.md  claude-code-workflow-openworkflow.pt-BR.md  claude-code-workflow-openworkflow.ru.md  register-free-channel.md
app/scripts/: needs-rebuild.ps1  stop-freeultracode-instances.ps1
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cc_switch_import.rs  cli_runtime.rs  free_proxy.rs  history.rs  lib.rs  proxy_http.rs
app/src/canvas/: BlueprintCanvas.tsx  irToFlow.ts
app/src/canvas/nodes/: AgentNode.tsx  ConsensusNode.tsx  ContainerNode.tsx  ControlNode.tsx  ParallelNode.tsx  PipelineNode.tsx
app/src/components/: BackgroundJobRunner.tsx  ScheduledTaskRunner.tsx  WorkspaceSelect.test.tsx  WorkspaceSelect.tsx
app/src/components/ai/: AudioPlayer.tsx  Callout.tsx  CodeBlock.tsx  CopyButton.tsx  FileChip.tsx  FilePreviewDrawer.test.tsx  FilePreviewDrawer.tsx  InlineCode.tsx  LazyMessageContent.tsx  Markdown.tsx  MessageContent.test.tsx  MessageContent.tsx  ModelViewer.test.tsx  ModelViewer.tsx  ReasoningBlock.tsx  SmartLink.tsx  (+5 more)
app/src/config/: gameOrgDefaults.json  personalInstructionsDefaults.json
app/src/core/: defaultBlueprint.ts  ir.ts  manifestRouter.test.ts  manifestRouter.ts  personalInstructions.ts  startInputs.ts
app/src/lib/: animationGeneration.ts  anthropic.ts  apiConfig.ts  backgroundJobs.test.ts  backgroundJobs.ts  composerStorage.ts  contextUsage.test.ts  contextUsage.ts  freeChannels.ts  gameExpertI18n.test.ts  gameExpertI18n.ts  gameExperts.test.ts  gameExperts.ts  gameOrg.test.ts  gameOrg.ts  gameOrgI18n.ts  gameProducer.test.ts  gameProducer.ts  gameSkill.test.ts  gameSkill.ts  gameSkillRegistry.ts  gatewayConfig.ts  i18n.ts  imageGeneration.test.ts  imageGeneration.ts  lspCatalog.test.ts  lspCatalog.ts  manifestMode.ts  mcpCatalog.test.ts  mcpCatalog.ts  meshLibrary.ts  modelSpeed.test.ts  modelSpeed.ts  musicGeneration.test.ts  musicGeneration.ts  pluginStore.test.ts  pluginStore.ts  projectSettings.test.ts  projectSettings.ts  sessionChanges.test.ts  (+16 more)
app/src/panels/: AIDock.projectFileDrag.test.tsx  AIDock.scroll.test.tsx  AIDock.slash.test.tsx  AIDock.tsx  GameTeamPanel.appDetails.test.tsx  GameTeamPanel.center.test.tsx  GameTeamPanel.storageQuota.test.tsx  GameTeamPanel.test.tsx  GameTeamPanel.tsx  PluginStorePanel.tsx  ProjectFileTree.gameTeamDetails.test.tsx  ProjectFileTree.gameTeamDetailsDrawer.test.tsx  ProjectFileTree.tsx  ProjectSettingsModal.test.tsx  ProjectSettingsModal.tsx  PromptPanel.running-lock.test.tsx  ScheduledTaskDialog.tsx  SettingsModal.gameExperts.test.tsx  SettingsModal.tsx  Sidebar.runProgress.test.tsx  Sidebar.tsx
app/src/runtime/: dag.test.ts  dag.ts  gateway.ts  node-dispatch.ts  types.ts
app/src/store/: promptTranslations.ts  sampleSessions.ts  storeState.ts  types.ts  useStore.image-generation.test.ts  useStore.music-generation.test.ts  useStore.rename-workflow-session.test.ts  useStore.simple-chat.test.ts  useStore.threeD-generation.test.ts  useStore.ts  useStore.workflow-readonly.test.ts  useStore.worldModel-generation.test.ts
app/src/styles/: global.css
(+20 files in other folders)
