[package]
name = "app"
version = "0.2.0"
description = "OpenWorkflows - Visual AI Workflow Editor"
authors = ["OpenWorkflows"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Name the standalone executable OpenWorkflows.exe (instead of app.exe).
[[bin]]
name = "OpenWorkflows"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
ureq = { version = "2", features = ["json", "tls"] }
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
