[package]
name = "app"
version = "0.5.5"
description = "UltraGameStudio - AI coding studio for game development"
authors = ["UltraGameStudio"]
license = ""
repository = "https://github.com/wellingfeng/UltraGameStudio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Name the standalone executable UltraGameStudio.exe (instead of app.exe).
[[bin]]
name = "UltraGameStudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
getrandom = "0.2"
keyring = "2"
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
ureq = { version = "2", features = ["json", "tls"] }
tiny_http = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
tauri-plugin-notification = "2.3.3"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7.2"
windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Foundation", "Foundation_Collections", "UI_Notifications"] }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.13"
